# oceanofcode

./: .gitconfig  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/oceanofcode/: CMakeLists.txt  aiworker.cpp  aiworker.h  gameworker.cpp  gameworker.h  gridgenerator.cpp  gridgenerator.h  main.cpp  oceanofcode.qrc  tile.cpp  tile.h  view.cpp  view.h
src/apps/oceanofcode-ai/: CMakeLists.txt  ai.cpp  ai.h  grid.cpp  grid.h  main.cpp  messagemanager.cpp  messagemanager.h  node.cpp  node.h  path.cpp  path.h  player.cpp  player.h  point.cpp  point.h
src/libraries/: CMakeLists.txt
src/libraries/oceanofcode-ai-lib/: CMakeLists.txt
